<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/homeFragment"
        android:title="@string/bottom_menu_home"
        android:icon="@drawable/menu_home" />
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shoppingListFragment"
        android:title="@string/bottom_menu_list"
        android:icon="@drawable/menu_cart"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mysteryBoxFragment"
        android:title="@string/bottom_menu_mystery_box"
        android:icon="@drawable/menu_question_mark"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settingsFragment"
        android:title="@string/bottom_menu_settings"
        android:icon="@drawable/menu_settings"/>
</menu>