<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipe_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_grey">

            <TextView
                android:id="@+id/ingredient_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="28dp"
                android:textSize="20dp"
                android:text="@string/ingredient_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/quantity_lalbel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="28dp"
                android:textSize="14dp"
                android:text="@string/quantity_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ingredient_label" />

            <TextView
                android:id="@+id/measurement_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:text="@string/measurement_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quantity_lalbel" />

            <EditText
                android:id="@+id/edit_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="number"
                android:textSize="14dp"
                app:layout_constraintStart_toEndOf="@+id/quantity_lalbel"
                app:layout_constraintTop_toBottomOf="@+id/edit_ingredient" />

            <EditText
                android:id="@+id/edit_ingredient"
                android:hint="@string/ingredient_label"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="text"
                app:layout_constraintStart_toEndOf="@+id/ingredient_label"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/edit_measurement"
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:entries="@array/measurements"
                android:layout_marginStart="22dp"
                app:layout_constraintStart_toEndOf="@+id/measurement_label"
                app:layout_constraintTop_toBottomOf="@+id/edit_quantity" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>